Update index.html- Consulting updated

--- a/index.html
+++ b/index.html
@@ -323,16 +323,19 @@
             </div>
             
             <!-- Consulting Interest -->
-            <div style="margin-bottom: 1.5rem;">
-                <label for="consulting" style="display: block; font-weight: 600; margin-bottom: 0.5rem; color: #333;">Interested in GBP consulting services?</label>
-                <select name="consulting" id="consulting" style="width: 100%; padding: 0.75rem; border: 2px solid #ff7417; border-radius: 5px; font-size: 1rem; background: rgba(255,180,12,0.08); box-sizing: border-box;">
-                    <option value="">Please select...</option>
-                    <option value="Yes - Call me ASAP">Yes - Call me ASAP</option>
-                    <option value="Yes - Email me details">Yes - Email me details</option>
-                    <option value="No">No - Just recovery needed</option>
-                    <option value="Maybe">Maybe - Tell me more</option>
-                </select>
-            </div>
+<div style="margin-bottom: 1.5rem;">
+    <label for="consulting" style="display: block; font-weight: 600; margin-bottom: 0.5rem; color: #333;">Interested in ongoing GBP consulting to prevent future suspensions and rank higher on Google Search?</label>
+    <select name="consulting" id="consulting" style="width: 100%; padding: 0.75rem; border: 2px solid #ff7417; border-radius: 5px; font-size: 1rem; background: rgba(255,180,12,0.08); box-sizing: border-box;">
+        <option value="">Please select...</option>
+        <option value="Yes - Call me ASAP">Yes - Call me ASAP</option>
+        <option value="Yes - Email me details">Yes - Email me details</option>
+        <option value="No - Just recovery needed">No - Just recovery needed</option>
+        <option value="Maybe - Tell me more">Maybe - Tell me more</option>
+    </select>
+    <p style="font-size: 0.9rem; color: #666; margin-top: 0.5rem; font-style: italic;">
+        Our consulting services help you prevent suspensions, optimize your profile, and rank on the first page of Google Search and Maps.
+    </p>
+</div>
             
             <!-- Submit Button -->
             <div style="text-align: center; margin-top: 2rem;">
