Update los-angeles-ca.html- Update Consulting Price

--- a/locations/los-angeles-ca.html
+++ b/locations/los-angeles-ca.html
@@ -248,13 +248,13 @@
                 <li><strong>Review management</strong> and response strategies</li>
                 <li><strong>Protection from future suspensions</strong></li>
             </ul>
-            <p><strong>Investment: Starting at $297/month for Los Angeles businesses</strong></p>
+            <p><strong>Investment: Contact us for optimizing your Google Business Profile (GBP) for Los Angeles businesses</strong></p>
             <a href="/" class="cta-button">Learn More About Monthly Consulting</a>
         </section>
         
         <section>
             <h2>Get Emergency Help in Los Angeles Now</h2>
-            <p>Don't let a suspended GBP cost you another day of business in the intensely competitive Los Angeles market. While your profile sits suspended, your competitors are capturing your customers—people who are actively searching for exactly what you offer right now. Our emergency recovery team is standing by to help restore your visibility and get your business back in front of the millions of people searching for services in LA every single day. We understand the urgency, we know the Los Angeles market, and we have the expertise to get results fast. Contact us immediately for priority assistance with your suspended profile.</p>
+            <p>Don't let a suspended GBP cost you another day of business in the intensely competitive Los Angeles market.  While your profile sits suspended, your competitors are capturing your customers—people who are actively searching for exactly what you offer right now. Our emergency recovery team is standing by to help restore your visibility and get your business back in front of the millions of people searching for services in LA every single day. We understand the urgency, we know the Los Angeles market, and we have the expertise to get results fast. Contact us immediately for priority assistance with your suspended profile.</p>
             <a href="/" class="cta-button">📞 Contact Los Angeles GBP Experts</a>
         </section>
     </main>
@@ -281,3 +281,4 @@
 </body>
 
 </html>
+
