Update index.html- added bus logo

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
         <div style="max-width: 1200px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
             
             <!-- Logo/Brand -->
-            <a href="/" style="font-size: 1.5rem; font-weight: bold; color: #ff7417; text-decoration: none;">
-                🚨 GBP Rescue
-            </a>
+            <a href="/" style="text-decoration: none; display: flex; align-items: center;">
+    <img src="/gbp-rescue-logo.png" alt="GBP Rescue" style="height: 50px; width: auto;">
+</a>
             
             <!-- Nav Links -->
             <div style="display: flex; gap: 2rem; align-items: center;">
