Update index.html- Added business Logo

--- a/locations/index.html
+++ b/locations/index.html
@@ -242,7 +242,9 @@
     <!-- Navigation -->
     <nav>
         <div>
-            <a href="/" class="logo">🚨 GBP Rescue</a>
+            <a href="/" class="logo" style="display: flex; align-items: center;">
+    <img src="/gbp-rescue-logo.png" alt="GBP Rescue" style="height: 50px;">
+</a>
             <div class="nav-links">
                 <a href="/">Home</a>
                 <a href="/#services">Services</a>
