Update los-angeles-ca.html- Removed logo update

--- a/locations/los-angeles-ca.html
+++ b/locations/los-angeles-ca.html
@@ -187,10 +187,8 @@
 </head>
 <body>
     <header class="header">
-        <div style="display: flex; align-items: center; gap: 1rem; flex-wrap: wrap;">
-    <img src="/gbp-rescue-logo.png" alt="GBP Rescue" style="height: 45px;">
-    <h2 style="margin: 0; color: white;">GBP Rescue - Los Angeles, CA</h2>
-</div>
+        <h2>🚨 GBP Rescue - Google Business Profile (GBP) Recovery Services in Los Angeles, CA</h2>
+    </header>
     
     <section class="hero">
         <h1>Reactivate Your Google Business Profile in Los Angeles</h1>
@@ -283,5 +281,3 @@
 </body>
 
 </html>
-
-
