Update index.html- 2nd 5 city location pages

--- a/locations/index.html
+++ b/locations/index.html
@@ -271,8 +271,46 @@
         <div class="city-grid">
 <!-- City Grid -->
 <div class="city-grid">
-    
-    <!-- Los Angeles (add this back!) -->
+    <!-- San Diego -->
+    <a href="/locations/san-diego-ca.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>San Diego, CA</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+
+    <!-- Dallas -->
+    <a href="/locations/dallas-tx.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Dallas, TX</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+
+    <!-- San Jose -->
+    <a href="/locations/san-jose-ca.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>San Jose, CA</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+
+    <!-- Austin -->
+    <a href="/locations/austin-tx.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Austin, TX</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+
+    <!-- Jacksonville -->
+    <a href="/locations/jacksonville-fl.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Jacksonville, FL</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Los Angeles -->
     <a href="/locations/los-angeles-ca.html" class="city-card">
         <div class="icon">📍</div>
         <h3>Los Angeles, CA</h3>
