--- a/locations/houston-tx.html
+++ b/locations/houston-tx.html
@@ -288,7 +288,7 @@
             <h2>💼 Monthly GBP Consulting Services for Houston</h2>
             <p>Prevent future suspensions and maximize your Google Business Profile performance with our monthly consulting service designed specifically for Houston businesses. Our Houston-based experts provide:</p>
             <ul>
-                <li><strong>Monthly profile audits</strong> and compliance checks to catch issues before they become problems</li>
+                <li><strong>Rank higher organically</strong> on Google Search and Maps</li>
                 <li><strong>Ongoing optimization</strong> with updates tailored to the competitive Houston market</li>
                 <li><strong>Priority support</strong> for any issues with guaranteed 24-hour response time</li>
                 <li><strong>Review management</strong> and response strategies to build your reputation</li>
