Update los-angeles-ca.html -consulting updated

--- a/locations/los-angeles-ca.html
+++ b/locations/los-angeles-ca.html
@@ -242,7 +242,7 @@
             <h2>💼 Monthly GBP Consulting Services for Los Angeles</h2>
             <p>Prevent future suspensions and optimize your Google Business Profile with our monthly consulting service. Our Los Angeles experts provide:</p>
             <ul>
-                <li><strong>Monthly profile audits</strong> and compliance checks</li>
+                <li><strong>Rank higher organically</strong> on Google Search and Maps</li>
                 <li><strong>Ongoing optimization</strong> and updates</li>
                 <li><strong>Priority support</strong> for any issues (24-hour response)</li>
                 <li><strong>Review management</strong> and response strategies</li>
@@ -281,3 +281,4 @@
 </body>
 
 </html>
+
