Update san-diego-ca.html- updating consulting

--- a/locations/san-diego-ca.html
+++ b/locations/san-diego-ca.html
@@ -317,7 +317,7 @@
             <h2>💼 Monthly GBP Consulting Services for San Diego</h2>
             <p>Prevent future suspensions and maximize your Google Business Profile performance with our monthly consulting service designed specifically for San Diego businesses. Our San Diego-based experts provide:</p>
             <ul>
-                <li><strong>Monthly profile audits</strong> and compliance checks to catch issues before they become problems</li>
+                <li><strong>Rank higher organically</strong> on Google Search and Maps</li>
                 <li><strong>Ongoing optimization</strong> with updates tailored to the competitive San Diego market</li>
                 <li><strong>Priority support</strong> for any issues with guaranteed 24-hour response time</li>
                 <li><strong>Review management</strong> and response strategies to build your reputation</li>
