--- a/locations/austin-tx.html
+++ b/locations/austin-tx.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GBP Rescue Services in Austin, TX | Emergency Profile Recovery</title>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GBP Rescue Services in Austin, TX | Emergency Profile Recovery</title>
+    <meta name="description" content="Suspended Google Business Profile in Austin? Get emergency rescue services from verified GBP recovery experts serving Austin, TX. 24-hour response time.">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HEQ7JQQFGH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-HEQ7JQQFGH');
+    </script>
+    <!-- End Google Analytics -->
+    
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <style>
+        :root {
+            --primary: #ff7417;
     <meta name="description" content="Suspended Google Business Profile in Austin? Get emergency rescue services from verified GBP recovery experts serving Austin, TX. 24-hour response time.">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
