--- a/locations/jacksonville-fl.html
+++ b/locations/jacksonville-fl.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GBP Rescue Services in Jacksonville, FL | Emergency Profile Recovery</title>
     <meta name="description" content="Suspended Google Business Profile in Jacksonville? Get emergency rescue services from verified GBP recovery experts serving Jacksonville, FL. 24-hour response time.">
+            <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HEQ7JQQFGH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-HEQ7JQQFGH');
+    </script>
+    
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
