Update index.html- 2nd 10 cities to location index

--- a/locations/index.html
+++ b/locations/index.html
@@ -279,6 +279,77 @@
         <span class="arrow">24-Hour Response →</span>
     </a>
 
+    <!-- Seattle -->
+    <a href="/locations/seattle-wa.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Seattle, WA</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Denver -->
+    <a href="/locations/denver-co.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Denver, CO</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Boston -->
+    <a href="/locations/boston-ma.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Boston, MA</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Atlanta -->
+    <a href="/locations/atlanta-ga.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Atlanta, GA</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Miami -->
+    <a href="/locations/miami-fl.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Miami, FL</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Minneapolis -->
+    <a href="/locations/minneapolis-mn.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Minneapolis, MN</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Detroit -->
+    <a href="/locations/detroit-mi.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Detroit, MI</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Charlotte -->
+    <a href="/locations/charlotte-nc.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Charlotte, NC</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Portland -->
+    <a href="/locations/portland-or.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Portland, OR</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+    <!-- Las Vegas -->
+    <a href="/locations/las-vegas-nv.html" class="city-card">
+        <div class="icon">📍</div>
+        <h3>Las Vegas, NV</h3>
+        <p>Emergency GBP Recovery</p>
+        <span class="arrow">24-Hour Response →</span>
+    </a>
+
     <!-- Dallas -->
     <a href="/locations/dallas-tx.html" class="city-card">
         <div class="icon">📍</div>
