--- a/locations/jacksonville-fl.html
+++ b/locations/jacksonville-fl.html
@@ -19,6 +19,71 @@
 {
   "@context": "https://schema.org",
   "@type": "ProfessionalService",
+  "name": "GBP Rescue - Las Vegas Google Business Profile Recovery",
+  "description": "Emergency Google Business Profile recovery and reinstatement services in Las Vegas, NV. 24-hour response time for suspended GBP profiles.",
+  "url": "https://gbprescue.com/locations/las vegas-NV.html",
+  "email": "info@gbprescue.com",
+  "priceRange": "$495-$690",
+  "areaServed": {
+    "@type": "City",
+    "name": "Las Vegas",
+    "addressRegion": "NV",
+    "addressCountry": "US"
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday",
+      "Sunday"
+    ],
+    "opens": "00:00",
+    "closes": "23:59"
+  },
+  "serviceType": [
+    "Google Business Profile Recovery",
+    "GBP Reinstatement",
+    "Business Profile Suspension Appeals",
+    "Emergency GBP Restoration"
+  ],
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "GBP Recovery Services",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Standard GBP Recovery Package",
+          "description": "Complete appeal support and reinstatement assistance"
+        },
+        "price": "495",
+        "priceCurrency": "USD"
+      },
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Express Activation",
+          "description": "Priority 24-hour response with expedited recovery"
+        },
+        "price": "690",
+        "priceCurrency": "USD"
+      }
+    ]
+  }
+}
+</script>
+
+    <!-- LocalBusiness Schema Markup - Add to <head> section after Google Analytics -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
   "name": "GBP Rescue - [CITY] Google Business Profile Recovery",
   "description": "Emergency Google Business Profile recovery and reinstatement services in Jacksonville, FL. 24-hour response time for suspended GBP profiles.",
   "url": "https://gbprescue.com/locations/jacksonville-fl.html",
