Update jacksonville-fl.html- Schema

--- a/locations/jacksonville-fl.html
+++ b/locations/jacksonville-fl.html
@@ -14,20 +14,20 @@
       gtag('config', 'G-HEQ7JQQFGH');
     </script>
 
-    <!-- LocalBusiness Schema Markup - Add to <head> section after Google Analytics -->
+   <!-- LocalBusiness Schema Markup - Add to <head> section after Google Analytics -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "ProfessionalService",
-  "name": "GBP Rescue - Las Vegas Google Business Profile Recovery",
-  "description": "Emergency Google Business Profile recovery and reinstatement services in Las Vegas, NV. 24-hour response time for suspended GBP profiles.",
-  "url": "https://gbprescue.com/locations/las vegas-NV.html",
+  "name": "GBP Rescue - Jacksonville Google Business Profile Recovery",
+  "description": "Emergency Google Business Profile recovery and reinstatement services in Jacksonville, FL. 24-hour response time for suspended GBP profiles.",
+  "url": "https://gbprescue.com/locations/jacksonville-fl.html",
   "email": "info@gbprescue.com",
   "priceRange": "$495-$690",
   "areaServed": {
     "@type": "City",
-    "name": "Las Vegas",
-    "addressRegion": "NV",
+    "name": "Jacksonville",
+    "addressRegion": "FL",
     "addressCountry": "US"
   },
   "openingHoursSpecification": {
@@ -77,6 +77,7 @@
     ]
   }
 }
+</script>
 </script>
 
     <!-- LocalBusiness Schema Markup - Add to <head> section after Google Analytics -->
