--- a/locations/minneapolis-mn.html
+++ b/locations/minneapolis-mn.html
@@ -14,7 +14,71 @@
       gtag('js', new Date());
       gtag('config', 'G-HEQ7JQQFGH');
     </script>
-    
+
+    <!-- LocalBusiness Schema Markup - Add to <head> section after Google Analytics -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "GBP Rescue - Minneapolis Google Business Profile Recovery",
+  "description": "Emergency Google Business Profile recovery and reinstatement services in Minneapolis, MN. 24-hour response time for suspended GBP profiles.",
+  "url": "https://gbprescue.com/locations/Minneapolis-mn.html",
+  "email": "info@gbprescue.com",
+  "priceRange": "$495-$690",
+  "areaServed": {
+    "@type": "City",
+    "name": "Minneapolis",
+    "addressRegion": "MN",
+    "addressCountry": "US"
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday",
+      "Sunday"
+    ],
+    "opens": "00:00",
+    "closes": "23:59"
+  },
+  "serviceType": [
+    "Google Business Profile Recovery",
+    "GBP Reinstatement",
+    "Business Profile Suspension Appeals",
+    "Emergency GBP Restoration"
+  ],
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "GBP Recovery Services",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Standard GBP Recovery Package",
+          "description": "Complete appeal support and reinstatement assistance"
+        },
+        "price": "495",
+        "priceCurrency": "USD"
+      },
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Express Activation",
+          "description": "Priority 24-hour response with expedited recovery"
+        },
+        "price": "690",
+        "priceCurrency": "USD"
+      }
+    ]
+  }
+}
+</script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
